# churn-prediction

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: dbt-cd.yml  dbt-ci.yml  ml-cd-ecr.yml  ml-docker-ci.yml  ml-sagemaker-dispatch.yml
dbt_churn/: .env.example  .gitignore  .sqlfluff  Makefile  dbt_project.yml  profiles.yml
dbt_churn/analyses/: metric_coverage.sql  mil1.sql
dbt_churn/macros/: dialect_metric.sql
dbt_churn/models/: sources.yml
dbt_churn/models/marts/: all_metrics.sql  churn_training_dataset.sql  current_customer_dataset.sql  metric.sql  metric_derived.sql  observation.sql
dbt_churn/models/qa/: metric_stats_over_time.sql
dbt_churn/scripts/: sqlfluff-fix.sh  sqlfluff-lint.sh
dbt_churn/seeds/: metric_name.csv
local-db/: .env.example  Dockerfile  Makefile  docker-compose.yml
local-db/sql_load/: 01_schema.sql  02_load_actions.sql
ml/containers/: inference.Dockerfile  preprocess.Dockerfile  requirements-inference.txt  requirements-preprocess.txt  requirements-train.txt  train.Dockerfile
ml/notebooks/: sagemaker_local_inference.ipynb  sagemaker_local_preprocess.ipynb  sagemaker_local_training.ipynb
ml/src/churn_ml/: explain.py  inference.py  preprocess.py  train.py
scripts/: dataset_stats.py  diagram_athena_dbt_pipeline.py  download_actions2load.py  export_churn_training_dataset.py  output.py  plot_churn_cohorts.py  plot_event_counts.py  plot_metric_qa.py  run_local_dbt_ci.sh  wait_for_postgres.sh
