[project]
name = "churn-prac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dbt = [
    "dbt-core>=1.11.9",
    "dbt-athena-community>=1.10.0",
    "dbt-postgres>=1.10.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
]
dev = [
    "diagrams>=0.25.1",
    "gdown>=5.2",
    "pre-commit>=4",
    "ruff>=0.4",
    "sqlfluff>=3.3",
    "sqlfluff-templater-dbt>=3.3",
]
ml = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]

ml-preprocess = [
    "pandas",
    "pyarrow>=15",
    "scikit-learn",
]

ml-train = [
    "joblib",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "xgboost",
]

ml-inference = [
    "joblib",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "xgboost",
]

[tool.uv]
required-version = ">=0.6.8"

[tool.ruff]
target-version = "py313"
src = ["ml/src", "scripts", "dbt_churn"]
[tool.ruff.lint]
select = ["E", "F", "I"]
